Обновление .gitignore для добавления исключения *.yaml и *.db файлов. Исправление обработки входных данных в TPSEGST для обработки случая, когда x равно None. Добавление параметров в hparams.py для улучшения валидации и настройки Guided Attention Loss. Удаление устаревшего logger.py и добавление нового класса GuidedAttentionLoss в loss_function.py. Обновление train.py для интеграции TensorBoard логирования и улучшения обработки метрик. Упрощение trainer_wrapper.py для интеграции с Optuna и улучшения управления процессом обучения.

--- a/.gitignore
+++ b/.gitignore
@@ -41,10 +41,10 @@ Thumbs.db
 /hifigan/
 generated_audio.wav
 out.png
-*.db
 *.json
 *.backup
 *.png
 *.txt
-*.db
 smart_tuner/optuna_studies.db
+*.yaml
+*.db
