Обновлен скрипт установки для улучшения пользовательского интерфейса и добавления анализа датасета. Введены новые функции для автоматического определения параметров обучения, включая количество trials и рекомендации по эпохам. Обновлены конфигурации гиперпараметров в YAML-файле с логарифмической шкалой для learning rate. Улучшена обработка типов параметров в классе OptimizationEngine для повышения стабильности.

--- a/smart_tuner/config.yaml
+++ b/smart_tuner/config.yaml
@@ -98,9 +98,10 @@ hyperparameter_search_space:
     
   learning_rate:
     type: float
-    min: 1e-6
-    max: 1e-3
-    default: 1e-4     # Сбалансированное значение
+    min: 0.000001     # 1e-6
+    max: 0.001        # 1e-3
+    default: 0.0001   # 1e-4 - Сбалансированное значение
+    log: true         # Логарифмическая шкала для learning rate
     
   warmup_steps:
     type: int
