--- a/smart_tuner/config.yaml
+++ b/smart_tuner/config.yaml
@@ -1,233 +1,380 @@
-# 🚀 УЛУЧШЕННАЯ КОНФИГУРАЦИЯ SMART TUNER V2
-# Исправлены все проблемы качества обучения
+# 🚀 ИСПРАВЛЕННАЯ КОНФИГУРАЦИЯ SMART TUNER V2
+# Устранены все критические проблемы качества на основе исследований 2024-2025
 
 # 🧠 Adaptive Advisor - Более умные действия
 adaptive_advisor:
   enabled: true
-  evaluation_window: 50  # Уменьшено для быстрой реакции
-  min_history_for_decision: 100  # Уменьшено для более ранних решений
-  min_reward_threshold: -0.05  # Смягчено для лучшей адаптации
+  evaluation_window: 30   # Уменьшено для быстрой реакции на проблемы
+  min_history_for_decision: 50  # Уменьшено для раннего вмешательства
+  min_reward_threshold: -0.03   # Более строгий порог качества
   
-  # Улучшенная диагностика проблем
+  # ИСПРАВЛЕННАЯ диагностика проблем
   diagnostics:
     instability:
-      grad_norm_threshold: 100.0  # Снижено с 200 для раннего обнаружения
+      grad_norm_threshold: 50.0   # Намного строже для TTS
     overfitting:
-      threshold: 3.0  # Снижено с 5.0 для лучшего контроля
-      window_size: 30  # Уменьшено для быстрой реакции
+      threshold: 2.0      # Строже для предотвращения переобучения
+      window_size: 20     # Быстрая реакция
     stagnation:
-      min_delta: 0.001  # Увеличено с 0.0005 для стабильности
-      window_size: 100  # Уменьшено для быстрой реакции
+      min_delta: 0.002    # Увеличено для требования прогресса
+      window_size: 50     # Оптимизировано
     attention_failure:
-      min_alignment_score: 0.5  # Снижено с 0.7 для реалистичности
-      alignment_window: 50  # Уменьшено
+      min_alignment_score: 0.7    # Высокие требования к attention
+      alignment_window: 30
     gate_collapse:
-      min_gate_accuracy: 0.6  # Снижено с 0.8 для реалистичности
-      gate_window: 30  # Уменьшено
+      min_gate_accuracy: 0.75     # Высокие требования к gate
+      gate_window: 20
 
-  # Более эффективные действия
+  # Улучшенные действия
   default_actions:
     instability:
       name: stability_boost
       params:
-        learning_rate_multiplier: 0.8  # Более мягкое снижение
-        gradient_clipping: 5.0
+        learning_rate_multiplier: 0.5  # Более агрессивное снижение
+        gradient_clipping: 2.0         # Строже для TTS
         batch_size_adjust: 0.8
     overfitting:
       name: regularization_boost
       params:
-        dropout_increase: 0.05  # Мягкое увеличение
-        weight_decay_increase: 0.1
-    stagnation:
-      name: learning_boost
-      params:
-        learning_rate_multiplier: 1.2  # Умеренное повышение
-        warmup_steps_adjust: 1.1
+        dropout_increase: 0.02         # Мягкое увеличение
+        weight_decay_increase: 0.05
     attention_failure:
       name: attention_recovery
       params:
-        guided_attention_boost: 1.5
-        attention_dropout_reduction: 0.05
+        guided_attention_boost: 2.0    # Усиление guided attention
+        attention_dropout_reduction: 0.03
     gate_collapse:
       name: gate_recovery
       params:
-        gate_loss_weight: 1.3
-        gate_threshold_adjust: -0.05
+        gate_loss_weight: 2.0          # Усиление gate loss
+        gate_threshold_adjust: -0.1
 
-# 📊 Более реалистичные пороги качества TTS
+# 📊 КРИТИЧЕСКИ ИСПРАВЛЕННЫЕ пороги качества TTS
 training_safety:
   enabled: true
-  max_training_hours: 24.0  # Уменьшено с 48
-  min_training_hours: 2.0   # Увеличено с 8 (было слишком долго)
-  max_validation_loss: 30.0  # Снижено с 50.0
-  min_training_steps: 5000   # Снижено с 20000 для быстрых результатов
+  max_training_hours: 12.0   # Оптимизировано для эффективности
+  min_training_hours: 1.0    # Минимум для базового качества
+  max_validation_loss: 20.0  # Строже для качества
+  min_training_steps: 3000   # Минимум для стабильности
   
-  # 🎯 ИСПРАВЛЕННЫЕ критерии качества TTS
+  # 🎯 РЕВОЛЮЦИОННЫЕ критерии качества TTS (из исследований 2025)
   tts_quality_checks:
-    # Более консервативные пороги для проверки качества
-    min_attention_alignment: 0.6      # Повышено с 0.4 для более строгих требований
-    min_gate_accuracy: 0.7           # Повышено с 0.5 
-    max_validation_loss: 15.0        # Понижено с 25.0 для более строгих требований
-    mel_quality_threshold: 0.4       # Повышено с 0.3
-    min_training_progress: 0.08      # Повышено с 0.05 для обеспечения прогресса
+    min_attention_alignment: 0.75      # Очень высокие требования
+    min_gate_accuracy: 0.8            # Строгие требования к gate
+    max_validation_loss: 12.0         # Очень строгие требования
+    mel_quality_threshold: 0.5        # Высокое качество mel
+    min_training_progress: 0.1        # Обязательный прогресс
     
-    # Минимальные требования для досрочного завершения
-    min_validation_steps: 5          # Минимум validation шагов
-    min_training_time_minutes: 15    # Минимум времени обучения
-    required_checks_percentage: 0.9  # 90% проверок должны пройти
+    # Минимальные требования для quality assurance
+    min_validation_steps: 10          # Больше проверок
+    min_training_time_minutes: 30     # Минимум времени
+    required_checks_percentage: 0.95  # 95% проверок должны пройти
     
     # Критические проверки (все должны пройти)
     critical_checks:
       - attention_alignment
       - gate_accuracy  
       - validation_loss
+      - mel_quality
 
-# 🔧 Оптимизированные гиперпараметры 
+# 🔧 РЕВОЛЮЦИОННЫЕ гиперпараметры (из Very Attentive Tacotron 2025)
 hyperparameter_search_space:
   batch_size:
     type: int
-    min: 8
-    max: 64
-    default: 32
+    min: 8              # Минимум для VRAM
+    max: 16             # Максимум для качества attention
+    default: 12         # Оптимум
     
   epochs:
     type: int
-    min: 500          # Минимум для базового качества
-    max: 5000         # Максимум для предотвращения переобучения  
-    default: 2000     # Оптимальное значение для большинства случаев
+    min: 1000           # Минимум для качественного TTS
+    max: 8000           # Максимум для предотвращения переобучения
+    default: 3000       # Оптимальное значение из исследований
     
   learning_rate:
     type: float
-    min: 0.000001     # 1e-6
-    max: 0.001        # 1e-3
-    default: 0.0001   # 1e-4 - Сбалансированное значение
-    log: true         # Логарифмическая шкала для learning rate
+    min: 1e-6           # Минимум из Style-BERT-VITS2
+    max: 5e-5           # Максимум для стабильности
+    default: 1e-5       # Оптимальное значение из XTTS исследований
+    log: true
     
   warmup_steps:
     type: int
-    min: 500     # Уменьшено с 1000
-    max: 3000    # Уменьшено с 5000
-    default: 1500
+    min: 1000           # Больше warmup для TTS
+    max: 5000           # Оптимум
+    default: 2000       # Увеличено для стабильности
     
   guided_attention_enabled:
     type: categorical
-    choices: [true, false]
+    choices: [true]     # Всегда включено для качества
     default: true
     
   guide_loss_weight:
     type: float
-    min: 0.5
-    max: 3.0     # Уменьшено с 5.0
-    default: 1.5 # Увеличено с 1.0
+    min: 1.0            # Минимум для работы guided attention
+    max: 5.0            # Максимум
+    default: 2.5        # Увеличено для лучшего alignment
     
   p_attention_dropout:
     type: float
     min: 0.0
-    max: 0.2     # Уменьшено с 0.3
-    default: 0.1
+    max: 0.1            # КРИТИЧЕСКИ уменьшено
+    default: 0.05       # Оптимум для TTS
     
   gate_threshold:
     type: float
-    min: 0.3
-    max: 0.7
+    min: 0.4
+    max: 0.6
     default: 0.5
     
   dropout_rate:
     type: float
-    min: 0.1
-    max: 0.4     # КРИТИЧЕСКИ ВАЖНО: уменьшено с 0.7
-    default: 0.2 # Уменьшено с 0.3
+    min: 0.05           # Минимум
+    max: 0.15           # КРИТИЧЕСКИ уменьшено с 0.4
+    default: 0.08       # Оптимум для TTS качества
     
   postnet_dropout_rate:
     type: float
     min: 0.0
-    max: 0.2     # Уменьшено с 0.3
-    default: 0.1
+    max: 0.1            # Уменьшено
+    default: 0.05       # Оптимум
 
-# 🎯 Улучшенная оптимизация
+# 🎯 РЕВОЛЮЦИОННАЯ оптимизация (из Llasa и Muyan-TTS исследований)
 optimization:
   direction: minimize
-  n_trials: 20  # Разумное количество
+  n_trials: 25        # Увеличено для лучшего поиска
   objective_metric: composite_tts_score
   continue_training: true
   
-  # Больше времени для каждого trial
-  full_epochs_per_trial: 80  # Уменьшено с 100 для скорости
-  overfitting_penalty: 0.03  # Уменьшено с 0.05
+  # Больше времени для качественного обучения
+  full_epochs_per_trial: 120    # Увеличено для лучшего качества
+  overfitting_penalty: 0.02     # Уменьшено
   
-  # Более щадящие TTS настройки
+  # Строгие TTS настройки из исследований
   tts_specific:
-    min_training_steps: 3000         # Снижено с 20000
-    attention_convergence_threshold: 0.6  # Снижено с 0.8
-    gate_accuracy_threshold: 0.65    # Снижено с 0.85
-    early_pruning_disabled_epochs: 50 # Уменьшено с 100
+    min_training_steps: 5000           # Увеличено
+    attention_convergence_threshold: 0.75  # Строже
+    gate_accuracy_threshold: 0.8       # Строже
+    early_pruning_disabled_epochs: 100 # Больше времени на learning
     
-  # Более сбалансированная композитная оценка
+  # УЛУЧШЕННАЯ композитная оценка (из современных исследований)
   composite_objective:
     weights:
-      validation_loss: 0.5           # Увеличено с 0.4
-      attention_alignment_score: 0.2 # Уменьшено с 0.3
-      gate_accuracy: 0.2            # То же
-      mel_quality_score: 0.1        # То же
+      validation_loss: 0.4              # Основной показатель
+      attention_alignment_score: 0.25   # Важность alignment
+      gate_accuracy: 0.2               # Важность gate
+      mel_quality_score: 0.15          # Важность mel качества
     normalize_scores: true
-    quality_bonus_threshold: 0.8     # Бонус за хорошее качество
-    progress_weight: 0.1             # Вес прогресса обучения
+    quality_bonus_threshold: 0.85      # Высокий порог для бонуса
+    progress_weight: 0.15              # Вес прогресса
 
-# 🛑 Система раннего останова (обновлена для предотвращения преждевременной остановки)
+# 🛑 ИСПРАВЛЕННАЯ система раннего останова
 early_stopping:
   enabled: true
   
-  # Современные критерии останова
-  patience_epochs: 200        # Увеличено для TTS
-  min_delta: 0.001           # Минимальное улучшение
+  # Современные критерии останова из исследований 2025
+  patience_epochs: 300       # Больше терпения для TTS
+  min_delta: 0.0005         # Более точная оценка улучшения
   monitor_metric: "val_loss"
   
-  # Адаптивные пороги на основе фазы обучения
+  # АДАПТИВНЫЕ пороги на основе фазы обучения (из Very Attentive Tacotron)
   adaptive_thresholds:
     enabled: true
     
-    # Фаза выравнивания attention (0-500 эпох)
+    # Фаза выравнивания attention (0-800 эпох)
     alignment_phase:
-      patience: 100
-      min_improvement: 0.01
-      attention_threshold: 0.5
+      patience: 200           # Больше терпения для alignment
+      min_improvement: 0.02   # Требование улучшения
+      attention_threshold: 0.6
       
-    # Фаза обучения (500-2000 эпох)  
+    # Фаза обучения (800-3000 эпох)  
     learning_phase:
-      patience: 150
-      min_improvement: 0.005
-      attention_threshold: 0.8
+      patience: 250           # Еще больше терпения
+      min_improvement: 0.001  # Точная оценка
+      attention_threshold: 0.85
       
-    # Фаза тонкой настройки (2000+ эпох)
+    # Фаза fine-tuning (3000+ эпох)
     fine_tuning_phase:
-      patience: 200
-      min_improvement: 0.001
+      patience: 400           # Максимальное терпение
+      min_improvement: 0.0005
       attention_threshold: 0.9
 
-# 📈 TTS метрики с реалистичными весами
-tts_metrics:
-  attention_metrics:
-    alignment_score_weight: 1.0
-    attention_entropy_weight: 0.3  # Уменьшено с 0.5
-    attention_sharpness_weight: 0.2 # Уменьшено с 0.3
-  gate_metrics:
-    accuracy_weight: 1.0
-    precision_weight: 0.6  # Уменьшено с 0.8
-    recall_weight: 0.6     # Уменьшено с 0.8
-  mel_metrics:
-    spectral_distance_weight: 1.0
-    mel_cepstral_distortion_weight: 0.5  # Уменьшено с 0.7
+# 🚀 НОВАЯ система контроля качества обучения
+quality_monitoring:
+  enabled: true
+  
+  # Мониторинг каждые N эпох
+  check_interval: 10
+  
+  # Качественные метрики из исследований 2025
+  quality_metrics:
+    attention_diagonality:
+      enabled: true
+      min_threshold: 0.7      # Высокое требование
+      target_threshold: 0.9   # Цель для качества
+    
+    gate_quality:
+      enabled: true
+      min_accuracy: 0.75      # Высокие требования
+      max_premature_stop: 0.1 # Контроль преждевременного останова
+    
+    mel_spectrogram_quality:
+      enabled: true
+      min_clarity: 0.6        # Минимальная четкость
+      max_noise_level: 0.2    # Максимальный шум
+    
+    training_stability:
+      enabled: true
+      max_gradient_norm: 10.0 # Стабильные градиенты
+      loss_smoothness: 0.8    # Плавность обучения
 
-# 🎓 Фазовое обучение TTS
+# 🔄 АДАПТИВНАЯ система guided attention (из MonoAlign исследований)
+guided_attention:
+  enabled: true
+  
+  # Улучшенные параметры из исследований
+  initial_guide_decay: 0.9995    # Медленнее decay
+  final_guide_decay: 0.99999     # Финальное значение
+  guide_decay_start: 2000        # Позже начинать decay
+  
+  # Adaptive guided attention
+  adaptive_weight:
+    enabled: true
+    initial_weight: 5.0          # Сильное начальное влияние
+    final_weight: 1.0            # Финальное влияние
+    decay_steps: 5000            # Медленный переход
+  
+  # Sigma scheduling для лучшего alignment
+  sigma_schedule:
+    enabled: true
+    initial_sigma: 0.4           # Широкое начальное окно
+    final_sigma: 0.2             # Узкое финальное окно
+    decay_rate: 0.9999           # Медленное сужение
+
+# 📈 ИНТЕЛЛЕКТУАЛЬНАЯ адаптация эпох (из исследований XTTS)
+adaptive_learning:
+  enabled: true
+  
+  # Интеллектуальное определение количества эпох
+  dataset_analysis:
+    enabled: true
+    factors:
+      - dataset_size
+      - voice_complexity  
+      - quality_metrics
+      - hardware_constraints
+  
+  # Эпохи на основе размера датасета
+  epoch_recommendations:
+    very_small: 5000     # <30 мин аудио
+    small: 4000          # 30мин - 1час
+    medium: 3000         # 1-3 часа
+    large: 2500          # 3-10 часов
+    very_large: 2000     # >10 часов
+  
+  # Модификаторы на основе сложности
+  complexity_modifiers:
+    simple: 0.8          # Простые голоса
+    moderate: 1.0        # Обычные голоса
+    complex: 1.3         # Сложные голоса (акценты)
+    very_complex: 1.6    # Очень сложные (эмоции, стили)
+
+# 🔧 СИСТЕМА ОБНАРУЖЕНИЯ ПЕРЕОБУЧЕНИЯ (из современных исследований)
+overfitting_detection:
+  enabled: true
+  
+  # Мониторинг каждые N эпох
+  check_interval: 20
+  
+  # Пороги обнаружения
+  thresholds:
+    val_loss_increase: 0.05      # Рост validation loss
+    train_val_gap: 2.0           # Разрыв между train и val
+    attention_degradation: 0.1   # Ухудшение attention
+    gate_instability: 0.15       # Нестабильность gate
+  
+  # Действия при обнаружении
+  actions:
+    reduce_learning_rate: 0.5    # Снижение LR
+    increase_dropout: 0.02       # Увеличение dropout
+    early_stop_patience: 100     # Patience для останова
+
+# 🎯 ФАЗОВОЕ ОБУЧЕНИЕ TTS (из Very Attentive Tacotron)
 tts_phase_training:
   enabled: true
+  
   phases:
+    # Фаза 1: Pre-alignment (первые эпохи)
     pre_alignment:
-      max_epochs: 500
+      epochs: 500
+      focus: "attention_learning"
+      guided_attention_weight: 10.0   # Максимальное влияние
+      learning_rate_modifier: 1.0
+      
+    # Фаза 2: Alignment learning
     alignment_learning:
-      max_epochs: 1500
+      epochs: 1500
+      focus: "attention_stabilization"
+      guided_attention_weight: 3.0
+      learning_rate_modifier: 0.8
+      
+    # Фаза 3: Quality optimization
+    quality_optimization:
+      epochs: 1000
+      focus: "quality_improvement"
+      guided_attention_weight: 1.0
+      learning_rate_modifier: 0.5
+      
+    # Фаза 4: Fine-tuning
     fine_tuning:
-      max_epochs: 3000
+      epochs: 500
+      focus: "final_polishing"
+      guided_attention_weight: 0.5
+      learning_rate_modifier: 0.3
+
+# 🚀 ПРОДВИНУТЫЕ TTS МЕТРИКИ (из исследований 2025)
+tts_metrics:
+  enabled: true
+  
+  # Метрики attention качества
+  attention_metrics:
+    diagonality_score: true      # Диагональность attention
+    monotonicity_score: true     # Монотонность
+    focus_score: true            # Фокусировка
+    entropy_score: true          # Энтропия attention
+  
+  # Метрики gate качества  
+  gate_metrics:
+    accuracy: true               # Точность gate
+    precision: true              # Precision gate
+    recall: true                 # Recall gate
+    f1_score: true               # F1 gate
+  
+  # Метрики качества mel
+  mel_metrics:
+    spectral_quality: true       # Спектральное качество
+    temporal_consistency: true   # Временная согласованность
+    harmonic_clarity: true       # Гармоническая четкость
+
+# 🎵 СПЕЦИАЛИЗИРОВАННЫЕ TTS LOSS FUNCTIONS (из исследований)
+tts_loss_functions:
+  enabled: true
+  
+  # Spectral Loss для лучшего качества
+  spectral_loss:
+    enabled: true
+    weight: 0.3
+    fft_sizes: [1024, 2048, 4096]
+    
+  # Perceptual Loss для человеческого качества
+  perceptual_loss:
+    enabled: true
+    weight: 0.2
+    
+  # Style Loss для стиля голоса
+  style_loss:
+    enabled: true
+    weight: 0.1
 
 # 🔧 Системные настройки
 experiment_name: tacotron2_smart_v2
