--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,39 @@
-numpy==1.21.6
-torch==1.13.1
-torchaudio==0.13.1
-librosa==0.9.2
-scipy==1.7.3
-matplotlib==3.5.3
-tensorboard==2.11.2
-Unidecode==1.3.6
-inflect==6.0.2
-pillow==9.3.0
-streamlit==1.25.0
-soundfile==0.12.1
-mlflow==2.1.1
-optuna>=3.0.0
-optuna-dashboard>=0.18.0
-requests>=2.25.0
-pandas>=1.3.0
+numpy>=1.19.0
+torch>=1.9.0
+torchvision>=0.10.0
+torchaudio>=0.9.0
+librosa>=0.8.1
+scipy>=1.7.0
+matplotlib>=3.3.0
+tensorboard>=2.7.0
+Pillow>=8.3.0
+inflect>=4.1.0
+Unidecode>=1.1.1
+python-telegram-bot>=20.0
+soundfile>=0.10.3
+pydub>=0.25.1
+resampy>=0.2.2
+
+# Text processing
+phonemizer>=2.2.1
+epitran>=1.1
+jamo>=0.4.1
+
+# Audio quality enhancement
+noisereduce>=2.0.0
+pystoi>=0.3.3
+pesq>=0.0.3
+
+# Smart Tuner dependencies
+scikit-learn>=1.0.0
+optuna>=2.10.0
+psutil>=5.8.0
 pyyaml>=5.4.0
-flask>=2.0.0
+
+# Development tools
+pytest>=6.2.0
+black>=21.0.0
+flake8>=3.9.0
 
 # Заменено на transformers для более производительной пакетной обработки
 # openai-whisper
